--- a/source/front-end/listcousers.html
+++ b/source/front-end/listcousers.html
@@ -95,6 +95,13 @@
         .fa-star {
             font-size: 13px;
         }
+
+        .footer-container {
+            padding-top: 20px;
+            padding-bottom: 20px;
+            font-size: 12px;
+            text-align: center;
+        }
     </style>
 </head>
 
@@ -305,8 +312,11 @@
                     </div>
                 </div>
             </div>
-
         </div>
+    </div>
+
+    <div class="footer-container">
+        @ copyright by web CTT2 team
     </div>
 </body>
 
