--- a/source/front-end/login.html
+++ b/source/front-end/login.html
@@ -34,6 +34,13 @@
         .navbar-collapse-right {
             margin-left: 750px;
         }
+
+        .footer-container {
+            padding-top: 30px;
+            padding-bottom: 20px;
+            font-size: 12px;
+            text-align: center;
+        }
     </style>
 </head>
 
@@ -65,6 +72,10 @@
                 </p>
             </div>
         </div>
+    </div>
+
+    <div class="footer-container">
+        @ copyright by web CTT2 team
     </div>
 </body>
 
