--- a/source/front-end/payment.html
+++ b/source/front-end/payment.html
@@ -66,6 +66,10 @@
             line-height: 19px;
             margin-bottom: 8px;
         }
+
+        .img-payment {
+            width: 100%;
+        }
     </style>
 </head>
 
@@ -126,7 +130,7 @@
                     <form action="#" method="POST">
                         <div class="row">
                             <div class="col-sm-2">
-                                <img src="/image/11.jpg" alt="">
+                                <img src="/image/11.jpg" alt="" class="img-payment">
                             </div>
                             <div class="col-sm-10"><strong>2021 Complete Python Bootcamp From Zero to Hero in Python
                             </strong></div>
